--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ copyright_name: Your/Project/Corporate Name
 description: "Write your site description here. It will be used as your sites meta description as well!"
 baseurl: "/blog"
 url: "http://yourdomain.com"
-twitter_username: SBootstrap
-github_username:  davidtmiller
-facebook_username:  StartBootstrap
+twitter_username:
+github_username:
+facebook_username:  
 email_username:  your-email@yourdomain.com
 
 # Google Analytics
